<resources>
    <string name="app_name">Lab4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Movie Factory</string>
    <string name="nav_header_subtitle">wusiman.yibulayin01@stclairconnect.ca</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_movie">Movie</string>
    <string name="menu_acting">Acting</string>
    <string name="menu_directing">Directing</string>
    <string name="menu_writing">Writing</string>
    <string name="menu_editing">Editing</string>
    <string name="menu_more">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_srouce">flickr.com</string>
    <string name="movie_text">Movies, or films, are a type of visual communication which uses moving pictures and sound to tell stories or teach people something. Most people watch (view) movies as a type of entertainment or a way to have fun. For some people, fun movies can mean movies that make them laugh, while for others it can mean movies that make them cry, or feel afraid.</string>
    <string name="text_source">(wikipedia.com)</string>
    <string name="text_directing">A movie director is a person who leads the making of a movie (or film). They take care of the artistic things in the movie. They give instructions to the actors and direct the people that work on the movie.</string>
    <string name="text_acting">An actor is a person who acts, or has a role (a part) in a movie, television show, play, or radio show. Actors may be professional or not. Sometimes actors only sing or dance, or sometimes they only work on radio. A woman actor is actress, but the word \"actor\" is used for both men and women when referring to group.</string>
    <string name="text_writing">A screenwriter is a person who writes the screenplay (or script) for a movie or television show - that is, a screenwriter writes the words that the actors and actresses speak.</string>
    <string name="text_editing">Film editing is both a creative and a technical part of the post-production process of filmmaking. The term is derived from the traditional process of working with film which increasingly involves the use of digital technology.</string>
    <string name="text_wikipedia">source: Wikipedia.com</string>

    <string-array name="factTitle">
        <item>Production Designer</item>
        <item>Cinematography</item>
        <item>Sound</item>
        <item>Box Office</item>
        <item>Ratings</item>
    </string-array>

    <string-array name="factText">
        <item>In film and television, the production designer is the individual responsible for the overall aesthetic of the story. The production design gives the viewers a sense of the time period, the plot location, and character actions and feelings. </item>
        <item>Cinematographers use a lens to focus reflected light from objects into a real image that is transferred to some image sensor or light-sensitive material inside a movie camera. </item>
        <item>A sound editor is a creative professional responsible for selecting and assembling sound recordings in preparation for the final sound mixing or mastering of a television program, motion picture, video game, or any production involving recorded or synthetic sound. </item>
        <item>A box office or ticket office is a place where tickets are sold to the public for admission to an event. Patrons may perform the transaction at a countertop, through a hole in a wall or window, or at a wicket.</item>
        <item>designated to classify films based on their suitability for audiences due to their treatment of issues such as sex, violence, or substance abuse; their use of profanity; or other matters typically deemed unsuitable for children or adolescents. </item>
    </string-array>
</resources>