<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_movie">
    <fragment
        android:id="@+id/nav_movie"
        android:name="ibrahim.example.lab4.MovieFragment"
        android:label="@string/menu_movie"
        tools:layout="@layout/fragment_movie" />
    <fragment
        android:id="@+id/nav_acting"
        android:name="ibrahim.example.lab4.ActingFragment"
        android:label="@string/menu_acting"
        tools:layout="@layout/fragment_acting" />
    <fragment
        android:id="@+id/nav_directing"
        android:name="ibrahim.example.lab4.DirectingFragment"
        android:label="@string/menu_directing"
        tools:layout="@layout/fragment_directing" />
    <fragment
        android:id="@+id/nav_writing"
        android:name="ibrahim.example.lab4.WritingFragment"
        android:label="@string/menu_writing"
        tools:layout="@layout/fragment_writing" />
    <fragment
        android:id="@+id/nav_editing"
        android:name="ibrahim.example.lab4.EditingFragment"
        android:label="@string/menu_editing"
        tools:layout="@layout/fragment_editing" />
    <fragment
        android:id="@+id/nav_more"
        android:name="ibrahim.example.lab4.MoreFragment"
        android:label="@string/menu_more"
        tools:layout="@layout/fragment_more" />
</navigation>